src/test/success/print_string_var.egern
var a = "testing"

print(a)