src/test/fail/assign_void_fail.egern
func empty() {
    return
}
var a = empty()
